# blog

./: README.md  _config.yml  articles.json  config.json  first.json  index.html  index.json  index.md  myst.search.json  myst.xref.json  objects.inv  pyproject.toml  requirements.txt  run.sh
.github/workflows/: jekyll.yml  jupyter-book-publish.yml
_posts/: 2025-11-05-first-post.md  2025-11-05-second-post.md
articles/: index.html
first/: index.html
jupyter/: _config.yml  _toc.yml  articles.md  intro.md  myst.yml
jupyter/articles/: first.md  second.md
